# Kid-Box-Better

./: CMakeLists.txt  png2bin.py  sdkconfig.defaults
+backup/: ui.h
components/boot_video/: CMakeLists.txt  boot_video.c  boot_video.h
components/display/: CMakeLists.txt  display.c  display.h  idf_component.yml
components/file_server/: CMakeLists.txt  file_server.c  file_server.h
components/lvgl_setup/: CMakeLists.txt  idf_component.yml  lvgl_setup.c  lvgl_setup.h
components/lvgl_squareline/: CMakeLists.txt
components/sd_card/: CMakeLists.txt  sd_card.c  sd_card.h
components/time_manager/: CMakeLists.txt  time_manager.c  time_manager.h
components/weather_manager/: CMakeLists.txt  file_server.c  file_server.h  weather_manager.c  weather_manager.h
main/: CMakeLists.txt  app_main.c
